--- a/index.html
+++ b/index.html
@@ -128,31 +128,31 @@
                     </div>
                 </div>
             </section>
-            <section class="foi-page-section mb-5">
+            <section class="foi-page-section">
                 <div class="flex-project">
                     <div>
                         <a target="blank" href="https://fervent-dubinsky-9d1acc.netlify.app/" class="team-member-card">
                             <img class="img-project" src="assets/images/portfolio/cabin.png" alt="Cardarion Hart">
-                            <h2 style="color:black" class="font-weight-normal">MangAmanda</h2>
-                            <p class="team-member-designation">Langage utilisé : Javascript</p>
-                            <p class="team-member-designation">Framework utilisé : Ionic</p>
+                            <h2 style="color:black; margin-top: 15px" class="font-weight-normal">MangAmanda</h2>
+                            <p style="color: black">Langage utilisé : Javascript</p>
+                            <p style="color: black">Framework utilisé : Ionic</p>
                         </a>
                     </div>
                     <div>
                         <a target="blank" href="https://webstart-dev.ovh/~dv19elfassy/bandeDessin%c3%a9e/index.php" class="team-member-card">
                             <img class="img-project" src="assets/images/portfolio/safe.png" alt="Gauthier Drewitt">
-                            <h2 style="color:black" class="font-weight-normal">Bulle De Gomme</h2>
-                            <p class="team-member-designation">Site e-commerce dedié à <br> la vente de figurine</p>
-                            <p class="team-member-designation">Langage utilisé : PHP/HTML/CSS</p>
+                            <h2 style="color:black; margin-top: 15px" class="font-weight-normal">Bulle De Gomme</h2>
+                            <p style="color: black">Site e-commerce dedié à <br> la vente de figurines</p>
+                            <p style="color: black">Langage utilisé : PHP/HTML/CSS</p>
                         </a>
                     </div>
                     <div>
                         <a target="blank" href="http://vue-fixer-amanda.herokuapp.com/" class="team-member-card">
                             <img class="img-project" src="assets/images/portfolio/cake.png" alt="Labeeba Al Amer">
-                            <h2 style="color:black" class="font-weight-normal">MyMoney</h2>
-                            <p class="team-member-designation" class="mb-0">Convertisseur de monnaies</p>
-                            <p class="team-member-designation"> Langage utilisé :JavaScript/HTML/CSS</p>
-                            <p class="team-member-designation">Framework utilisé : VueJs</p>
+                            <h2 style="color:black; margin-top: 15px" class="font-weight-normal">MyMoney</h2>
+                            <p  style="color: black"class="mb-0">Convertisseur de monnaies</p>
+                            <p style="color: black"> Langage utilisé :JavaScript/HTML/CSS</p>
+                            <p style="color: black">Framework utilisé : VueJs</p>
                         </a>
                     </div>
                 </div>
@@ -184,9 +184,9 @@
         </div>
     </section>
 
-    <section class="py-5 mb-5" id="competence">
+    <section class=" mb-5" id="competence">
         <div class="container">
-            <h2>Mes compétences</h2>
+            <h2 class="mb-5">Mes compétences</h2>
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <div class="media landing-feature">
