--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
     <section class="py-5 mb-5" id="project">
         <div class="container">
-            <h1 style="text-align: center; margin-bottom: 20px;">Quelques projets</h1>
+            <h1 class="mb-5">Quelques projets</h1>
             <section class="foi-page-section pt-0">
                 <div class="row">
                     <div class="col-md-6 mb-4 mb-md-0 pr-lg-0">
@@ -133,7 +133,7 @@
                     <div>
                         <a target="blank" href="https://fervent-dubinsky-9d1acc.netlify.app/" class="team-member-card">
                             <img class="img-project" src="assets/images/portfolio/cabin.png" alt="Cardarion Hart">
-                            <h2 style="color:black; margin-top: 15px" class="font-weight-normal">MangAmanda</h2>
+                            <h2 style="color:black; margin-top: 15px">MangAmanda</h2>
                             <p style="color: black">Langage utilisé : Javascript</p>
                             <p style="color: black">Framework utilisé : Ionic</p>
                         </a>
@@ -141,7 +141,7 @@
                     <div>
                         <a target="blank" href="https://webstart-dev.ovh/~dv19elfassy/bandeDessin%c3%a9e/index.php" class="team-member-card">
                             <img class="img-project" src="assets/images/portfolio/safe.png" alt="Gauthier Drewitt">
-                            <h2 style="color:black; margin-top: 15px" class="font-weight-normal">Bulle De Gomme</h2>
+                            <h2 style="color:black; margin-top: 15px">Bulle De Gomme</h2>
                             <p style="color: black">Site e-commerce dedié à <br> la vente de figurines</p>
                             <p style="color: black">Langage utilisé : PHP/HTML/CSS</p>
                         </a>
@@ -149,7 +149,7 @@
                     <div>
                         <a target="blank" href="http://vue-fixer-amanda.herokuapp.com/" class="team-member-card">
                             <img class="img-project" src="assets/images/portfolio/cake.png" alt="Labeeba Al Amer">
-                            <h2 style="color:black; margin-top: 15px" class="font-weight-normal">MyMoney</h2>
+                            <h2 style="color:black; margin-top: 15px">MyMoney</h2>
                             <p  style="color: black"class="mb-0">Convertisseur de monnaies</p>
                             <p style="color: black"> Langage utilisé :JavaScript/HTML/CSS</p>
                             <p style="color: black">Framework utilisé : VueJs</p>
