--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h1>Bienvenue !</h1>
                         <h1>Mon portfolio</h1>
                         <p class="text-dark">Développeuse web junior</p>
-                        <p>Passionée par les nouvelles technologies, je souhaite devenir développeuse web Front-end</p>
+                        <p>Passionnée par les nouvelles technologies, je souhaite devenir développeuse web Front-end</p>
                         <a href="assets/cv.pdf" target="blank" class="btn btn-primary mb-4">Mon CV</a>
                     </div>
                     <div class="col-md-6">
@@ -63,13 +63,13 @@
                     <h2 class="section-title">A propos</h2>
                     <p class="mb-5">Je m'appelle Amanda, j'ai 22 ans, je suis étudiante en développement web et mobile.<br><br>
                     J'ai obtenu mon bac Scientifique en 2017, puis j'ai effectué un BTS option développement web que j'ai obtenu en 2019.<br>Par la suite j'ai décidé d'effectuer un bachelor en 3 ans, en développement web et mobile.</p>
-                    <p class="mb-5">Je suis actuellement en 3ème année, à la recherche d'une alternance pour effectuer mon master.</p>
+                    <p class="mb-5">Je suis actuellement en 3ème année, à la recherche d'un post en développement web front-end.</p>
                    
                 </div>
             </div>
         </div>
     </section>
-    <section class="py-5 mb-5" id="project">
+    <section class="py-5 mb-5" id="project" style="background-color: #be9cff17;">
         <div class="container">
             <h1 class="mb-5">Quelques projets</h1>
             <section class="foi-page-section pt-0">
@@ -80,7 +80,7 @@
                         </h2>
                         <div class="about-section-one-content">
                             <p>Projet de fin de 2e année de bachelor.</p>
-                            <p>Le but du projet etait de créer un système qui permet de vendre des services mensuels et annuels sous forme d’abonnement.</p> 
+                            <p>Le but du projet était de créer un système qui permet de vendre des services mensuels et annuels sous forme d’abonnement.</p> 
                             <p>Nous étions totalement libre du sujet</p>
                             <p>J'ai donc choisi sans hésitaion le thème des sneakers étant moi-même une passionnée de baskets ! </p>                            
                         </div>
@@ -90,7 +90,7 @@
                                 <a target="blank" href="http://kingdom-amanda.herokuapp.com/" style="text-decoration: underline;">Site </a><br>
                                 <strong>Technologies utilisées : </strong>
                                 <strong>Langages</strong> : PHP / HTML /CSS <br> 
-                                <strong>Framework </strong> : Laravel / bootstrap
+                                <strong>Framework </strong> : Laravel / Bootstrap
                             </div>
                             <br>
                             <div>
@@ -202,7 +202,7 @@
                         <span class="landing-feature-icon"></span>
                         <div class="media-body">
                             <p>Framework</p>
-                            <h5>Laravel / bootstrap / Ionic / Tailwind</h5>
+                            <h5>Laravel / Bootstrap / Ionic / Tailwind</h5>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                     <div class="media landing-feature">
                         <span class="landing-feature-icon"></span>
                         <div class="media-body">
-                            <p>Notion Framework</p>
+                            <p>Notions Framework</p>
                             <h5>VueJs / React Native</h5>
                         </div>
                     </div>
