--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h2 class="section-title">A propos</h2>
                     <p class="mb-5">Je m'appelle Amanda, j'ai 22 ans, je suis étudiante en développement web et mobile.<br><br>
                     J'ai obtenu mon bac Scientifique en 2017, puis j'ai effectué un BTS option développement web que j'ai obtenu en 2019.<br>Par la suite j'ai décidé d'effectuer un bachelor en 3 ans, en développement web et mobile.</p>
-                    <p class="mb-5">Je suis actuellement en 3ème année, à la recherche d'un post en développement web front-end.</p>
+                    <p class="mb-5">Je suis actuellement à la recherche d'une alternance pour pouvoir effectuer un master en développement web.</p>
                    
                 </div>
             </div>
@@ -136,6 +136,7 @@
                             <h2 style="color:black; margin-top: 15px">MangAmanda</h2>
                             <p style="color: black">Langage utilisé : Javascript</p>
                             <p style="color: black">Framework utilisé : Ionic</p>
+                            <p style="color: black">Mettre sous format mobile si on est sur pc)</p>
                         </a>
                     </div>
                     <div>
@@ -150,9 +151,10 @@
                         <a target="blank" href="http://vue-fixer-amanda.herokuapp.com/" class="team-member-card">
                             <img class="img-project" src="assets/images/portfolio/cake.png" alt="Labeeba Al Amer">
                             <h2 style="color:black; margin-top: 15px">MyMoney</h2>
-                            <p  style="color: black"class="mb-0">Convertisseur de monnaies</p>
+                            <p  style="color: black"class="mb-0">Application Convertisseur de monnaies</p>
                             <p style="color: black"> Langage utilisé :JavaScript/HTML/CSS</p>
                             <p style="color: black">Framework utilisé : VueJs</p>
+                            <p style="color: black">Mettre sous format mobile si on est sur pc</p>
                         </a>
                     </div>
                 </div>
@@ -221,6 +223,15 @@
                         <div class="media-body">
                             <p>Base de données</p>
                             <h5>MySql / PhpMyAdmin</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <div class="media landing-feature">
+                        <span class="landing-feature-icon"></span>
+                        <div class="media-body">
+                            <p>Outils</p>
+                            <h5>Git / Jira</h5>
                         </div>
                     </div>
                 </div>
