--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="col-md-6">
                     <h2 class="section-title">A propos</h2>
                     <p class="mb-5">Je m'appelle Amanda, j'ai 22 ans, je suis étudiante en développement web et mobile.<br><br>
-                    J'ai obtenu mon bac Scientifique en 2017, puis j'ai effectué un BTS option développement web que j'ai obtenu en 2019.<br>Par la suite j'ai décidé d'effectuer un bachelor en 3 ans, en développement web et mobile.</p>
+                    J'ai obtenu mon bac Scientifique en 2017, puis j'ai effectué un BTS option développement web que j'ai obtenu en 2019.<br>Par la suite j'ai décidé d'effectuer un bachelor en 3 ans, en développement web et mobile, que j'ai obtenu en juillet 2022.</p>
                     <p class="mb-5">Je suis actuellement à la recherche d'une alternance pour pouvoir effectuer un master en développement web.</p>
                    
                 </div>
